--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
+    "lorem-ipsum": "^1.0.6",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.0",
     "react-chat-elements": "^10.0.2",
     "react-dom": "^16.5.0",
+    "react-js-vector-icons": "0.0.4",
+    "react-native-vector-icons": "^5.0.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -18,7 +21,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
-    "redux-devtools-log-monitor": "^1.4.0"
+    "redux-devtools-log-monitor": "^1.4.0",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
