Изменения внешнего вида

--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
+    "art": "^0.10.3",
     "lorem-ipsum": "^1.0.6",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.0",
+    "react-art-svg-renderer": "0.0.1-rc.8",
     "react-chat-elements": "^10.0.2",
     "react-dom": "^16.5.0",
     "react-js-vector-icons": "0.0.4",
     "react-native-vector-icons": "^5.0.0",
+    "react-qr-code": "^0.1.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
