--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
+    "react-vk": "^3.1.0",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
     "redux-devtools-log-monitor": "^1.4.0",
