Валидация, Настройки, шлифовка

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chat-elements": "^10.0.2",
     "react-dom": "^16.5.0",
     "react-js-vector-icons": "0.0.4",
+    "react-material-ui-form-validator": "^2.0.1",
     "react-native-vector-icons": "^5.0.0",
     "react-qr-code": "^0.1.2",
     "react-redux": "^5.0.7",
